--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,23 +1,25 @@
 form {
-  background-color: rgb(165, 186, 203);
+  background-color: rgb(42, 103, 103);
   display: inline-block;
-  margin: auto;
-  width: 500px;
+  margin: 10%;
+  width: 1000px;
   border-radius: 5%;
   justify-content: center;
   justify-items: center;
   padding: 50px 50px 50px 50px;
+  
 }
 form label {
   display: flex;
   margin: 1rem 0;
 }
-form label.methods span {
+form label.methods  {
   cursor: pointer;
   margin-right: 1rem;
   padding: 0.25rem 0.5rem;
-  background: #ccc;
+  align-items: center;
+  margin: 50px;
 }
-form label.methods span:hover, form label.methods span.active {
+form label.methods button:hover, form label.methods span.active {
   background: #fff;
 }/*# sourceMappingURL=form.css.map */
